/**
 * Copyright Â© 2016-2022 The Thingsboard Authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto3";

option java_package = "org.thingsboard.server.gen.vc.v1";
option java_multiple_files = true;
option java_outer_classname = "EdgeProtos";

package vc;

// Interface exported by the ThingsBoard Core.
service TbGitRpcService {

  rpc commit(stream CommitRequestMsg) returns (CommitResponseMsg) {}

}


/**
 * Data Structures;
 */
message CommitRequestMsg {
  string txId = 1;
  PrepareMsg prepareMsg = 2;
  AddMsg addMsg = 3;
  DeleteMsg deleteMsg = 4;
  PushMsg pushMsg = 5;
  AbortMsg abortMsg = 6;
}

message CommitResponseMsg {
  string id = 1;
  string name = 2;
  int32 added = 3;
  int32 modified = 4;
  int32 removed = 5;
}

message PrepareMsg {
  string tenantId = 1;
  string commitMsg = 2;
  string branchName = 3;
}

message AddMsg {
  string relativePath = 1;
  string entityDataJson = 2;
}

message DeleteMsg {
  string relativePath = 1;
}

message PushMsg {
}

message AbortMsg {
}